Increase inner content width

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,9 @@
 ---
 
 @import "{{ site.theme }}";
+.inner {
+  max-width: 900px;
+}
 
 /* The actual timeline (the vertical ruler) */
     .JRMtimeline {
